Bug 1414945 - Don't use TimeDuration in static initializer. r=jandem

On Darwin this would cause a race between two static initializers.